--- a/docs/content/p0.md
+++ b/docs/content/p0.md
@@ -1,75 +1,165 @@
-# Introducción a los Sistemas Embebidos
+# **Introducción a JavaScript**
 
-## ¿Qué son los Sistemas Embebidos?
+JavaScript es un **lenguaje de programación** versátil y ampliamente utilizado que permite agregar interactividad y dinamismo a las aplicaciones web y más allá. A continuación, se presenta una visión general de qué es JavaScript, su historia, usos y su rol en el desarrollo web, diseñada para alinearse con los objetivos de la **Clase 1: Introducción a JavaScript y Primeros Pasos**.
 
-Los sistemas embebidos son sistemas de computación diseñados para realizar una o varias funciones específicas, frecuentemente en un sistema de computación en tiempo real. A diferencia de las computadoras de propósito general, los sistemas embebidos están "embebidos" como parte de un sistema completo que incluye hardware, mecánica y otros componentes.
+  <a href="https://gamma.app/embed/f9v442hqtqz3k1e" target="_blank" class="boton-enlace">Abrir Presentación en Nueva Pestaña</a>
 
-## Características Principales
+<iframe src="https://gamma.app/embed/f9v442hqtqz3k1e" style="width: 700px; max-width: 100%; height: 450px" allow="fullscreen" title="Fundamentos de JavaScript"></iframe>
 
-- **Propósito Específico**: Diseñados para una tarea o conjunto de tareas específicas
-- **Recursos Limitados**: Operan con recursos de hardware optimizados
-- **Tiempo Real**: Muchos sistemas embebidos deben responder en tiempo real
-- **Alta Confiabilidad**: Diseñados para funcionar de manera continua y confiable
-- **Bajo Consumo**: Optimizados para eficiencia energética
+---
 
-## Componentes Fundamentales
+### **¿Qué es JavaScript?**
 
-### 1. Hardware
+- **Definición**:
+      - JavaScript es un lenguaje de programación interpretado, de alto nivel y orientado a eventos, principalmente utilizado para agregar interactividad a páginas web.
+      - Es **multiplataforma**: se ejecuta en navegadores (lado cliente) y en servidores (con entornos como Node.js).
+      - Soporta paradigmas como programación funcional, orientada a objetos y basada en eventos.
 
-- **Microcontroladores**: El "cerebro" del sistema (Arduino, ESP32, STM32)
-- **Sensores**: Capturan información del entorno
-- **Actuadores**: Ejecutan acciones en el mundo físico
-- **Interfaces**: Permiten la comunicación con otros dispositivos
+- **Características clave**:
+      - **Dinámico**: Permite modificar el contenido de una página web en tiempo real (por ejemplo, actualizar un texto sin recargar la página).
+      - **Ligero**: No requiere compilación, ya que los navegadores lo interpretan directamente.
+      - **Estandarizado**: Basado en ECMAScript, con versiones actualizadas como ES6 (2015) que introdujeron mejoras significativas.
 
-### 2. Software
+---
 
-- **Firmware**: Código que controla directamente el hardware
-- **Sistema Operativo en Tiempo Real (RTOS)**: Para aplicaciones más complejas
-- **Drivers**: Software para controlar dispositivos específicos
+### **Historia de JavaScript**
+- **Origen**:
+      - Creado en 1995 por **Brendan Eich** en Netscape Communications.
+      - Inicialmente llamado **Mocha**, luego **LiveScript**, y finalmente **JavaScript** para capitalizar la popularidad de Java (aunque no están relacionados).
+      - Primer propósito: Agregar pequeñas funcionalidades interactivas a páginas web estáticas.
 
-## Herramientas de Desarrollo
+- **Evolución**:
+      - 1997: Estandarización como ECMAScript (ES1).
+      - 2009: ES5 trajo mejoras en funcionalidad.
+      - 2015: ES6 (ECMAScript 2015) introdujo características modernas como arrow functions, let/const, y promesas.
+      - Actualmente: Actualizaciones anuales (ES2020, ES2023, etc.) para mantener el lenguaje relevante.
 
-### 1. Entornos de Desarrollo (IDE)
+- **Impacto**:
+      - De ser un lenguaje para animaciones simples, pasó a ser la base de aplicaciones web complejas, servidores, e incluso inteligencia artificial.
 
-- Arduino IDE
-- PlatformIO
-- STM32CubeIDE
-- Keil µVision
+---
 
-### 2. Lenguajes de Programación
+### **Usos y Aplicaciones**
+JavaScript es un pilar del desarrollo moderno debido a su flexibilidad. Sus principales usos incluyen:
 
-- C/C++
-- Python (para algunos sistemas)
-- Ensamblador (para optimizaciones)
+1. **Desarrollo web (lado cliente)**:
+      - Manipulación del **DOM** (Document Object Model) para cambiar contenido, estilos o estructura de una página.
+      - Ejemplos: Validar formularios, crear animaciones, manejar eventos (clics, teclas).
+      - Frameworks populares: **React**, **Vue.js**, **Angular**.
 
-## Aplicaciones Prácticas
+2. **Desarrollo backend (lado servidor)**:
+      - Con **Node.js**, JavaScript se usa para construir servidores, APIs y aplicaciones escalables.
+      - Ejemplo: Plataformas como Netflix y PayPal usan Node.js.
 
-1. **Electrónica de Consumo**
+3. **Aplicaciones móviles**:
+      - Frameworks como **React Native** permiten crear aplicaciones nativas para iOS y Android.
+      - Ejemplo: Aplicaciones como Instagram y Airbnb.
 
-   - Electrodomésticos inteligentes
-   - Dispositivos IoT
-   - Wearables
+4. **Juegos y gráficos**:
+      - Bibliotecas como **Three.js** o **Phaser** permiten crear juegos 2D/3D en navegadores.
+      - Ejemplo: Juegos interactivos en sitios web.
 
-2. **Industrial**
+5. **Otros usos**:
+      - Automatización (scripts con Node.js).
+      - Inteligencia artificial (TensorFlow.js para modelos de machine learning).
+      - Internet de las cosas (IoT) con plataformas como Johnny-Five.
 
-   - Automatización
-   - Control de procesos
-   - Robótica
+---
 
-3. **Automotriz**
+### **Rol en el Desarrollo Web**
+JavaScript es uno de los tres pilares del desarrollo web, junto con **HTML** y **CSS**:
 
-   - Sistemas de control del motor
-   - Sistemas de seguridad
-   - Entretenimiento vehicular
+- **HTML**: Define la estructura de una página (títulos, párrafos, imágenes).
+- **CSS**: Controla el diseño y estilo (colores, fuentes, disposición).
+- **JavaScript**: Añade interactividad y lógica (eventos, cálculos, actualizaciones dinámicas).
+---
 
-## Metodología del Curso
+**Ejemplo práctico**:
+```html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Ejemplo de JavaScript</title>
+  <style>
+    button { padding: 10px; font-size: 16px; }
+  </style>
+</head>
+<body>
+  <h1 id="mensaje">¡Haz clic en el botón!</h1>
+  <button onclick="cambiarMensaje()">Cambiar Mensaje</button>
+  <script>
+    function cambiarMensaje() {
+      document.getElementById("mensaje").innerText = "¡JavaScript en acción!";
+    }
+  </script>
+</body>
+</html>
+```
 
-### 1. Fase Teórica
-- Conceptos fundamentales
-- Arquitectura de sistemas
-- Principios de diseño
+- **Explicación**:
+      - HTML crea la estructura (título y botón).
+      - CSS estiliza el botón.
+      - JavaScript cambia el texto del título al hacer clic.
 
-### 2. Fase Práctica
-- Laboratorios guiados
-- Proyectos prácticos
-- Debugging y resolución de problemas
+---
+
+### **Por qué aprender JavaScript**
+- **Ubicuidad**: Está presente en casi todas las páginas web modernas.
+- **Versatilidad**: Útil para frontend, backend, móvil, y más.
+- **Comunidad y recursos**: Amplia documentación (MDN Web Docs, JavaScript.info) y frameworks que facilitan el desarrollo.
+- **Demanda laboral**: Alta demanda de desarrolladores JavaScript en la industria tecnológica.
+
+---
+
+## Actividad: Creación de Recursos Visuales sobre JavaScript (Cliente vs. Servidor)
+
+**Título**: "Visualizando JavaScript: Usos en Cliente, Servidor y su Impacto Tecnológico"
+
+**Duración**: 2 horas  
+
+**Formato**: Trabajo en grupos (4 grupos de 3-4 estudiantes cada uno)  
+
+**Objetivo**: Diseñar un recurso visual único (infografía, mapa mental, diagrama o línea de tiempo) que compare y diferencie el uso de **JavaScript en el cliente (navegador)** y en el **servidor (Node.js)**, destacando las tecnologías derivadas de JavaScript y su importancia en el desarrollo moderno. Cada grupo presentará su recurso de forma creativa para maximizar su impacto visual y educativo.
+
+---
+
+### **Descripción**
+JavaScript es un pilar del desarrollo web y más allá, con aplicaciones tanto en el **navegador** (interactividad en páginas web) como en el **servidor** (construcción de APIs y backend con Node.js). Además, ha dado lugar a tecnologías clave como React, Express y React Native, que refuerzan su relevancia. En esta actividad, formarán **4 grupos de trabajo**, y cada uno creará un **recurso visual diferente** (infografía, mapa mental, diagrama de flujo o línea de tiempo) que:
+
+1. Compare y diferencie claramente los usos de JavaScript en el **cliente** y el **servidor**.
+2. Resalte las **tecnologías derivadas** de JavaScript (frameworks, bibliotecas, herramientas).
+3. Comunique visualmente la **importancia** de JavaScript en el desarrollo moderno.
+
+Los recursos deben ser claros, atractivos y diseñados para facilitar la comprensión de las diferencias entre ambos entornos, con ejemplos concretos y un enfoque creativo en la presentación.
+
+---
+
+### **Instrucciones**
+
+#### **1. Formación de Grupos y Asignación de Recursos Visuales**
+- Se formarán **4 grupos** de 3-4 estudiantes.
+- Cada grupo creará un **recurso visual diferente** (asignado por el instructor o elegido por el grupo):
+      - **Grupo 1**: **Infografía** (un póster visual con secciones claras y gráficos).
+      - **Grupo 2**: **Mapa mental** (un diagrama ramificado que organiza ideas).
+      - **Grupo 3**: **Diagrama de flujo** (un esquema que muestra procesos o relaciones).
+      - **Grupo 4**: **Línea de tiempo** (una secuencia histórica o evolutiva de JavaScript).
+- **Roles sugeridos** (dentro de cada grupo): 
+      - Coordinador (organiza tareas).
+      - Investigador (recopila información).
+      - Diseñador (crea el recurso visual).
+      - Presentador (explica el recurso).
+
+#### **2. Contenido del Recurso Visual**
+Cada recurso debe incluir los siguientes elementos, organizados de manera clara y visualmente atractiva:
+
+- Comparación Cliente vs. Servidor**
+- Tecnologías Derivadas de JavaScript**
+- Importancia de JavaScript   
+ 
+#### **3. Exposición Creativa**
+- Cada grupo presentará su recurso visual en **15 minutos**, explicando:
+  - La estructura del recurso y cómo organiza la información.
+  - Las diferencias clave entre JavaScript en el cliente y el servidor.
+  - Una tecnología derivada de JavaScript y su impacto.
+  - Un ejemplo de código o caso de uso.
