--- a/docs/content/p0.md
+++ b/docs/content/p0.md
@@ -104,6 +104,15 @@ JavaScript es uno de los tres pilares del desarrollo web, junto con **HTML** y *
 
 ---
 
+### **Otro ejemplo**
+
+<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="Qwwqxer" data-pen-title="JavaScript" data-user="Jhon-Valencia-the-animator" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/Jhon-Valencia-the-animator/pen/Qwwqxer">
+  JavaScript</a> by Jhon Valencia (<a href="https://codepen.io/Jhon-Valencia-the-animator">@Jhon-Valencia-the-animator</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://public.codepenassets.com/embed/index.js"></script>
+
 ### **Por qué aprender JavaScript**
 - **Ubicuidad**: Está presente en casi todas las páginas web modernas.
 - **Versatilidad**: Útil para frontend, backend, móvil, y más.
