--- a/docs/content/p2.md
+++ b/docs/content/p2.md
@@ -1129,3 +1129,206 @@ Esta actividad consiste en desarrollar una nueva variación para cada uno de los
 
 
 ---
+
+## **Actividad: 20 Ejercicios sobre Funciones en JavaScript**
+
+### **Instrucciones**
+1. Resuelve cada ejercicio escribiendo el código en JavaScript.
+2. Prueba tus soluciones en un entorno como la consola del navegador o un editor como VS Code.
+3. Asegúrate de entender cómo funcionan las funciones, los parámetros, el ámbito y las diferentes formas de declarar funciones.
+4. Al final, encontrarás un archivo con las soluciones dentro de un bloque `<xaiArtifact/>`.
+
+---
+
+### **Ejercicios Básicos**
+
+1. **Saludo simple**  
+   Escribe una **declaración de función** que reciba un nombre como parámetro y devuelva un saludo. Ejemplo: `saludar("Ana")` → `"¡Hola, Ana!"`.
+
+2. **Suma de dos números**  
+   Crea una **expresión de función** que sume dos números y devuelva el resultado. Ejemplo: `sumar(3, 5)` → `8`.
+
+3. **Arrow function para duplicar**  
+   Escribe una **arrow function** que reciba un número y devuelva su doble. Ejemplo: `duplicar(4)` → `8`.
+
+4. **Par o impar**  
+   Crea una **declaración de función** que determine si un número es par o impar. Ejemplo: `esPar(6)` → `true`, `esPar(7)` → `false`.
+
+5. **Valor por defecto**  
+   Escribe una función que reciba un nombre y un saludo opcional (por defecto: "Hola"). Ejemplo: `saludar("Juan")` → `"Hola, Juan"`, `saludar("Ana", "Buenos días")` → `"Buenos días, Ana"`.
+
+6. **Función sin parámetros**  
+   Crea una **arrow function** sin parámetros que devuelva un mensaje fijo. Ejemplo: `mensaje()` → `"¡JavaScript es genial!"`.
+
+7. **IIFE simple**  
+   Escribe una **IIFE** que imprima en consola "¡Soy una IIFE!" sin contaminar el ámbito global.
+
+---
+
+### **Ejercicios Intermedios**
+
+8. **Suma de un array**  
+   Crea una **expresión de función** que reciba un array de números y devuelva su suma usando un bucle o `reduce`. Ejemplo: `sumarArray([1, 2, 3])` → `6`.
+
+9. **Rest parameters**  
+   Escribe una función que use **rest parameters** para aceptar cualquier número de argumentos y devuelva su producto. Ejemplo: `multiplicar(2, 3, 4)` → `24`.
+
+10. **Cierre (closure)**  
+    Crea una función que devuelva otra función que incremente un contador privado cada vez que se llame. Ejemplo:  
+    ```javascript
+    const contador = crearContador();
+    contador(); // 1
+    contador(); // 2
+    ```
+
+11. **Método en objeto**  
+    Crea un objeto `calculadora` con un método `sumar` (usando una declaración de función) y otro método `restar` (usando una arrow function). Ejemplo:  
+    ```javascript
+    calculadora.sumar(5, 3); // 8
+    calculadora.restar(5, 3); // 2
+    ```
+
+12. **Factorial recursivo**  
+    Escribe una **expresión de función nombrada** que calcule el factorial de un número. Ejemplo: `factorial(5)` → `120`.
+
+13. **Filtrar mayores**  
+    Crea una **arrow function** que reciba un array de números y devuelva un nuevo array con los números mayores a 10. Ejemplo: `filtrarMayores([5, 12, 8, 15])` → `[12, 15]`.
+
+14. **Parámetros por defecto avanzado**  
+    Escribe una función que calcule el área de un rectángulo con base y altura, usando valores por defecto de 1 para ambos. Ejemplo: `calcularArea(5)` → `5`, `calcularArea(5, 3)` → `15`.
+
+---
+
+### **Ejercicios Avanzados**
+
+15. **Callback**  
+    Crea una función que reciba un array de números y una función de callback para procesar cada elemento. Ejemplo:  
+    ```javascript
+    procesar([1, 2, 3], num => num * 2); // [2, 4, 6]
+    ```
+
+16. **Ámbito y cierre**  
+    Crea una función que genere un generador de saludos personalizados. La función externa recibe un saludo base, y la función interna recibe un nombre. Ejemplo:  
+    ```javascript
+    const saludarConHola = crearSaludo("Hola");
+    saludarConHola("Ana"); // "Hola, Ana"
+    ```
+
+17. **IIFE con parámetros**  
+    Escribe una **IIFE** que reciba dos números y devuelva su suma, ejecutándose inmediatamente. Ejemplo: `(function(a, b) {...})(3, 5)` → `8`.
+
+18. **Función como método dinámico**  
+    Crea un objeto `persona` con un método `presentarse` que use una **arrow function** para devolver una presentación. Ejemplo:  
+    ```javascript
+    persona.nombre = "Ana";
+    persona.presentarse(); // "Mi nombre es Ana"
+    ```
+
+19. **Rest parameters y reduce**  
+    Escribe una función que use **rest parameters** para calcular el promedio de todos los números recibidos. Ejemplo: `promedio(10, 20, 30)` → `20`.
+
+20. **Combinación de funciones**  
+    Crea una función `componer` que combine dos funciones, donde el resultado de la primera se pasa como argumento a la segunda. Ejemplo:  
+    ```javascript
+    const duplicar = x => x * 2;
+    const sumarDiez = x => x + 10;
+    const combinada = componer(duplicar, sumarDiez);
+    combinada(5); // (5 * 2) + 10 = 20
+    ```
+
+---
+
+## **Solución a los Ejercicios**
+
+```javascript
+function saludar(nombre) {
+    return `¡Hola, ${nombre}!`;
+}
+
+const sumar = function(a, b) {
+    return a + b;
+};
+
+const duplicar = x => x * 2;
+
+function esPar(numero) {
+    return numero % 2 === 0;
+}
+
+function saludarConDefault(nombre, saludo = "Hola") {
+    return `${saludo}, ${nombre}`;
+}
+
+const mensaje = () => "¡JavaScript es genial!";
+
+(function() {
+    console.log("¡Soy una IIFE!");
+})();
+
+const sumarArray = function(arr) {
+    return arr.reduce((total, num) => total + num, 0);
+};
+
+function multiplicar(...numeros) {
+    return numeros.reduce((total, num) => total * num, 1);
+}
+
+function crearContador() {
+    let contador = 0;
+    return function() {
+        contador++;
+        return contador;
+    };
+}
+
+const calculadora = {
+    sumar: function(a, b) {
+        return a + b;
+    },
+    restar: (a, b) => a - b
+};
+
+const factorial = function calcularFactorial(n) {
+    if (n === 0) return 1;
+    return n * calcularFactorial(n - 1);
+};
+
+const filtrarMayores = arr => arr.filter(num => num > 10);
+
+function calcularArea(base = 1, altura = 1) {
+    return base * altura;
+}
+
+function procesar(arr, callback) {
+    return arr.map(callback);
+}
+
+function crearSaludo(saludoBase) {
+    return function(nombre) {
+        return `${saludoBase}, ${nombre}`;
+    };
+}
+
+(function(a, b) {
+    return a + b;
+})(3, 5);
+
+const persona = {
+    nombre: "",
+    presentarse: () => `Mi nombre es ${persona.nombre}`
+};
+
+function promedio(...numeros) {
+    if (numeros.length === 0) return 0;
+    return numeros.reduce((total, num) => total + num, 0) / numeros.length;
+}
+
+function componer(f, g) {
+    return function(x) {
+        return g(f(x));
+    };
+}
+```
+
+---
+
