Add examples and solution for currency converter activity in DOM manipulation

--- a/docs/content/p5.md
+++ b/docs/content/p5.md
@@ -287,7 +287,7 @@ elemento.remove();
 
 ---
 
-## Ejemplo Completo
+## Ejemplo 1
 
 A continuación, un ejemplo que combina los conceptos explicados:
 
@@ -336,17 +336,246 @@ A continuación, un ejemplo que combina los conceptos explicados:
 4. Se elimina el primer párrafo con `remove`.
 
 ---
+## Ejemplo 2 
 
-## Buenas Prácticas
+### Calculadora Básica
 
-- **Usa `textContent` en lugar de `innerHTML`** cuando solo necesites modificar texto, para evitar riesgos de seguridad.
-- **Optimiza selectores**: Usa `getElementById` para IDs por su eficiencia.
-- **Valida la existencia de elementos**: Verifica si un elemento existe (`if (elemento) {...}`) antes de manipularlo.
-- **Evita manipular el DOM excesivamente**: Las operaciones en el DOM pueden ser costosas en términos de rendimiento; agrupa cambios cuando sea posible.
+```html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculadora Básica</title>
+    <style>
+        .calculator {
+            width: 300px;
+            margin: 50px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+        #display {
+            width: 90%;
+            height: 40px;
+            margin-bottom: 10px;
+            font-size: 20px;
+            text-align: right;
+            padding: 5px;
+        }
+        .buttons {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 5px;
+        }
+        button {
+            padding: 10px;
+            font-size: 18px;
+            cursor: pointer;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
+        button:hover {
+            background-color: #e0e0e0;
+        }
+        .operator {
+            background-color: #ff9500;
+            color: white;
+        }
+        .operator:hover {
+            background-color: #e68a00;
+        }
+        .clear {
+            background-color: #ff3b30;
+            color: white;
+        }
+        .clear:hover {
+            background-color: #e6332a;
+        }
+        .equals {
+            background-color: #28a745;
+            color: white;
+        }
+        .equals:hover {
+            background-color: #218838;
+        }
+    </style>
+</head>
+<body>
+    <div class="calculator">
+        <input type="text" id="display" readonly value="0">
+        <div class="buttons">
+            <button class="clear" onclick="clearDisplay()">C</button>
+            <button onclick="appendToDisplay('7')">7</button>
+            <button onclick="appendToDisplay('8')">8</button>
+            <button onclick="appendToDisplay('9')">9</button>
+            <button class="operator" onclick="setOperator('/')">/</button>
+            <button onclick="appendToDisplay('4')">4</button>
+            <button onclick="appendToDisplay('5')">5</button>
+            <button onclick="appendToDisplay('6')">6</button>
+            <button class="operator" onclick="setOperator('*')">×</button>
+            <button onclick="appendToDisplay('1')">1</button>
+            <button onclick="appendToDisplay('2')">2</button>
+            <button onclick="appendToDisplay('3')">3</button>
+            <button class="operator" onclick="setOperator('-')">-</button>
+            <button onclick="appendToDisplay('0')">0</button>
+            <button onclick="appendToDisplay('.')">.</button>
+            <button class="equals" onclick="calculate()">=</button>
+            <button class="operator" onclick="setOperator('+')">+</button>
+        </div>
+    </div>
 
----
+    <script>
+        // Paso 1: Obtener referencia al elemento del DOM donde se mostrará el resultado
+        const display = document.getElementById('display');
+        let currentNumber = '0'; // Almacena el número actual
+        let firstNumber = null; // Primer número de la operación
+        let operator = null; // Operador actual
+        let waitingForSecondNumber = false; // Estado para manejar el segundo número
 
-## Actividad Práctica: Manipulación del DOM con JavaScript
+        // Paso 2: Función para agregar caracteres al número actual
+        function appendToDisplay(value) {
+            if (waitingForSecondNumber) {
+                // Si estamos esperando el segundo número, reiniciamos el display
+                currentNumber = value === '.' ? '0.' : value;
+                waitingForSecondNumber = false;
+            } else {
+                // Agregamos al número actual, evitando ceros iniciales
+                if (currentNumber === '0' && value !== '.') {
+                    currentNumber = value;
+                } else {
+                    currentNumber += value;
+                }
+            }
+            // Actualizamos el valor del display en el DOM
+            display.value = currentNumber;
+        }
+
+        // Paso 3: Función para establecer el operador
+        function setOperator(op) {
+            if (firstNumber === null) {
+                // Guardamos el primer número y el operador
+                firstNumber = parseFloat(currentNumber);
+                operator = op;
+                waitingForSecondNumber = true;
+            } else if (!waitingForSecondNumber) {
+                // Si ya hay un primer número y operador, calculamos
+                calculate();
+                operator = op;
+                waitingForSecondNumber = true;
+            }
+        }
+
+        // Paso 4: Función para limpiar el display y reiniciar variables
+        function clearDisplay() {
+            currentNumber = '0';
+            firstNumber = null;
+            operator = null;
+            waitingForSecondNumber = false;
+            display.value = '0';
+        }
+
+        // Paso 5: Función para realizar la operación
+        function performOperation(num1, op, num2) {
+            const n1 = parseFloat(num1);
+            const n2 = parseFloat(num2);
+            switch (op) {
+                case '+':
+                    return n1 + n2;
+                case '-':
+                    return n1 - n2;
+                case '*':
+                    return n1 * n2;
+                case '/':
+                    if (n2 === 0) {
+                        throw new Error('División por cero');
+                    }
+                    return n1 / n2;
+                default:
+                    throw new Error('Operador inválido');
+            }
+        }
+
+        // Paso 6: Función para calcular el resultado
+        function calculate() {
+            if (firstNumber === null || operator === null || waitingForSecondNumber) {
+                return; // No calculamos si faltan datos
+            }
+            try {
+                // Calculamos el resultado usando el primer número, el operador y el número actual
+                const result = performOperation(firstNumber, operator, currentNumber);
+                // Actualizamos el display con el resultado
+                display.value = isFinite(result) ? result : 'Error';
+                // Preparamos para la siguiente operación
+                currentNumber = result.toString();
+                firstNumber = null;
+                operator = null;
+                waitingForSecondNumber = false;
+            } catch (error) {
+                display.value = 'Error';
+                clearDisplay();
+            }
+        }
+    </script>
+</body>
+</html>
+```
+
+### Explicación paso a paso de la manipulación del DOM y la lógica simple:
+
+1. **Estructura HTML y CSS** (sin cambios significativos):
+  
+      - El HTML usa un `<input id="display">` de solo lectura para mostrar números y resultados.
+      - Los botones están organizados en una cuadrícula con CSS para un diseño claro.
+      - Los botones de operadores ahora usan `setOperator(op)` en lugar de `appendToDisplay(op)` para manejar la lógica de operadores.
+
+2. **Variables de estado**:
+   
+      - `currentNumber`: Almacena el número que el usuario está ingresando.
+      - `firstNumber`: Guarda el primer número de la operación.
+      - `operator`: Almacena el operador actual (`+`, `-`, `*`, `/`).
+      - `waitingForSecondNumber`: Indica si estamos esperando el segundo número después de seleccionar un operador.
+      - Estas variables simplifican la lógica al mantener el estado de la calculadora.
+
+3. **Obtener referencia al DOM**:
+   
+      - Usamos `document.getElementById('display')` para obtener el elemento `<input>` y manipular su propiedad `value`.
+
+4. **Función `appendToDisplay(value)`**:
+   
+      - Maneja la entrada de números y puntos decimales.
+      - Si `waitingForSecondNumber` es `true`, reinicia `currentNumber` con el nuevo valor (evitando concatenar al número anterior).
+      - Evita ceros iniciales reemplazando `'0'` con el nuevo dígito, salvo que sea un punto decimal.
+      - Actualiza el DOM asignando `currentNumber` a `display.value`.
+
+5. **Función `setOperator(op)`**:
+   
+      - Almacena el operador seleccionado (`op`) y el primer número (`firstNumber`) si aún no están definidos.
+      - Si ya hay un operador y un primer número, realiza un cálculo intermedio antes de establecer el nuevo operador.
+      - Cambia `waitingForSecondNumber` a `true` para preparar la entrada del segundo número.
+
+6. **Función `clearDisplay()`**:
+   
+      - Reinicia todas las variables (`currentNumber`, `firstNumber`, `operator`, `waitingForSecondNumber`) y establece `display.value` a `'0'`.
+
+7. **Función `performOperation(num1, op, num2)`**:
+   
+      - Realiza una operación matemática entre dos números según el operador.
+      - Convierte los números a flotantes con `parseFloat` para manejar decimales.
+      - Lanza errores para divisiones por cero o operadores inválidos.
+
+8.  **Función `calculate()`**:
+   
+       - Se ejecuta al presionar `=`. Verifica que `firstNumber` y `operator` estén definidos y que no estemos esperando el segundo número.
+       - Usa `performOperation` para calcular el resultado usando `firstNumber`, `operator` y `currentNumber`.
+       - Actualiza el DOM con el resultado (`display.value`) si es finito; de lo contrario, muestra `'Error'`.
+       - Reinicia las variables para permitir nuevas operaciones, almacenando el resultado como `currentNumber`.
+
+
+## Actividad 1: Manipulación del DOM con JavaScript
 
 ## Objetivo
 Esta actividad tiene como propósito que los estudiantes practiquen los conceptos del **Document Object Model (DOM)** en JavaScript, incluyendo la selección, modificación, creación y eliminación de elementos en una página web. Los estudiantes aplicarán los métodos `getElementById`, `querySelector`, `querySelectorAll`, `innerHTML`, `textContent`, `style`, `createElement`, `appendChild` y `remove` en un ejercicio interactivo.
@@ -494,3 +723,188 @@ Copia el siguiente código HTML en un archivo llamado `actividad-dom.html` para 
 - Usa `elemento.remove()` para eliminar el elemento.
 
 ---
+## Actividad 2: Calculadora Conversora de Divisas
+
+## Enunciado
+
+Completar una calculadora conversora de divisas que permita convertir entre pesos colombianos (COP), dólares estadounidenses (USD) y euros (EUR). El HTML y CSS ya están proporcionados, pero el archivo JavaScript está vacío. Debes implementar la lógica en JavaScript para realizar las conversiones de divisas según las tasas de cambio proporcionadas.
+
+## Objetivo
+
+Implementar la función `convert()` en JavaScript para que:
+- Obtenga la cantidad ingresada por el usuario.
+- Identifique las monedas de origen y destino seleccionadas.
+- Realice la conversión usando las tasas de cambio dadas.
+- Muestre el resultado con dos decimales en el formato: `Resultado: [valor] [moneda destino]`.
+- Maneje casos de error, como cantidades no válidas.
+
+## Tasas de Cambio
+
+Usa las siguientes tasas de cambio fijas (no necesitas obtenerlas de una API):
+
+- 1 COP = 0.00024 USD
+- 1 COP = 0.00022 EUR
+- 1 USD = 4200 COP
+- 1 USD = 0.93 EUR
+- 1 EUR = 4500 COP
+- 1 EUR = 1.08 USD
+
+## Instrucciones
+
+1. Abre el archivo `index.html` proporcionado abajo.
+2. Crea un archivo `script.js` en el mismo directorio.
+3. Implementa la función `convert()` que se ejecuta al hacer clic en el botón "Convertir".
+4. Usa el objeto `exchangeRates` para almacenar las tasas de cambio.
+```json
+const exchangeRates = {
+    COP: { USD: 0.00024, EUR: 0.00022 },
+    USD: { COP: 4200, EUR: 0.93 },
+    EUR: { COP: 4500, USD: 1.08 }
+};
+```
+5. Asegúrate de:
+   
+   - Validar que la cantidad ingresada sea un número mayor a cero.
+   - Mostrar un mensaje de error si la cantidad no es válida.
+   - No realizar conversiones si la moneda de origen y destino son la misma (mostrar la cantidad tal cual).
+   - Mostrar el resultado con dos decimales.
+  
+6. Prueba la calculadora en un navegador para verificar que las conversiones sean correctas.
+
+## Archivos Proporcionados
+
+### index.html
+
+```html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Actividad: Conversor de Divisas</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="converter">
+        <h2>Conversor de Divisas</h2>
+        <div class="input-group">
+            <input type="number" id="amount" placeholder="Cantidad" min="0">
+            <select id="fromCurrency">
+                <option value="COP">Pesos Colombianos (COP)</option>
+                <option value="USD">Dólares (USD)</option>
+                <option value="EUR">Euros (EUR)</option>
+            </select>
+            <span>a</span>
+            <select id="toCurrency">
+                <option value="COP">Pesos Colombianos (COP)</option>
+                <option value="USD">Dólares (USD)</option>
+                <option value="EUR">Euros (EUR)</option>
+            </select>
+        </div>
+        <button onclick="convert()">Convertir</button>
+        <div id="result"></div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
+```
+
+### styles.css
+
+```css
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(135deg, #e0e7ff, #c7d2fe);
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+.converter {
+    background: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    max-width: 500px;
+    width: 90%;
+    transition: transform 0.3s ease;
+}
+.converter:hover {
+    transform: translateY(-5px);
+}
+h2 {
+    color: #1e3a8a;
+    margin-bottom: 20px;
+    font-size: 1.8em;
+    text-align: center;
+}
+.input-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+input, select {
+    padding: 12px;
+    font-size: 1em;
+    border: 1px solid #d1d5db;
+    border-radius: 8px;
+    outline: none;
+    transition: border-color 0.3s ease;
+}
+input:focus, select:focus {
+    border-color: #3b82f6;
+    box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+}
+input {
+    width: 120px;
+}
+select {
+    width: 150px;
+    background: #f9fafb;
+}
+button {
+    background: #3b82f6;
+    color: white;
+    border: none;
+    padding: 12px 24px;
+    font-size: 1em;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+button:hover {
+    background: #2563eb;
+    transform: scale(1.05);
+}
+button:active {
+    transform: scale(0.95);
+}
+#result {
+    margin-top: 20px;
+    font-size: 1.2em;
+    color: #1e3a8a;
+    font-weight: bold;
+    text-align: center;
+}
+@media (max-width: 480px) {
+    .converter {
+        padding: 20px;
+    }
+    input, select {
+        width: 100%;
+    }
+    .input-group {
+        flex-direction: column;
+    }
+}
+```
+
+### script.js
+
+```javascript
+//Tu Solución
+```
